<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="app_name">QRCE</string>
    <string name="qrce">Quick Review for Computer Engineers</string>
    <string name="short_qrce">QRCE</string>
    <string name="android_qrce_app">Android QRCE App</string>
    <string name="saying">Do study in better way</string>
    <string name="tv_version">Version 1.0</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark all read</string>
    <string name="action_clear_all">Clear all</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_ntc">NTC</string>
    <string name="nav_nea">NEA</string>
    <string name="nav_loksewa">LokSewa</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_settings">Settings</string>
    <string name="C_programming">C Programming</string>
    <string name="sample_questions">Sample Questions</string>
    <string name="test">Test</string>
    <string name="exam_papers">Exam Papers</string>
    <string name="QRCE_version_1">QRCE V1.0</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="header_view">Header View</string>
    <string name="website">com.qrce.nast.qrce</string>
    <string name="str_next">Confirm</string>
    <string name="str_again">Play Again</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="about_us_text"> This app is developed by: \n
                    Suresh Pangeni \n
                    Suresh Upreti \n
                    Chandramani Bhandari \n
                    Chakra Bahadur Singh \n
                    Contact E-mail: qrce.nast.qrce.com \n
                    Phone: +977-09100000 \n
                    Address: Dhangadhi, Kailali,Farwest, Nepal \n
    </string>

    <string-array name="subjects">
        <item>C Programming</item>
        <item>Basic Electrical</item>
        <item>OOP in C++</item>
        <item>Data Structures and Algorithms</item>
        <item>Electronic Devices and Circuit</item>
        <item>Logic Circuits</item>
        <item>OOP in C++</item>
        <item>Data Structures and Algorithms</item>
        <item>Database Management System</item>
        <item>Microprocessor</item>
        <item>C#</item>
        <item>Java</item>
        <item>Mathematics</item>
        <item>Theory of Computation</item>
        <item>Numerical Methods</item>
        <item>Object Oriented Software Engineering</item>
        <item>"Data Communication</item>
        <item>Simulation and Modeling</item>
        <item>Embedded System</item>
        <item>Operating System</item>
        <item>Artificial Intelligence</item>
        <item>Computer Networks</item>
        <item>Digital Signal Processing</item>
        <item>Information System</item>
        <item>Social and Professional Issues in IT</item>
    </string-array>
</resources>
