<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"
            />
        <item
            android:id="@+id/nav_ntc"
            android:icon="@mipmap/ic_ntc_foreground"
            android:title="@string/nav_ntc" />
        <item
            android:id="@+id/nav_nea"
            android:icon="@mipmap/ic_nea_foreground"
            android:title="@string/nav_nea" />
 
        <item
            android:id="@+id/nav_loksewa"
            android:icon="@mipmap/ic_loksewa_foreground"
            android:title="@string/nav_loksewa" />
 
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>
 
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>
 
</menu>