<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LokSewaActivity">
<include
    android:id="@+id/header"
    layout="@layout/layout_header"
    ></include>
<include
    layout="@layout/layout_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"></include>
    <Button
        android:layout_marginTop="@dimen/dimen_50dp"
        android:id="@+id/btn_sample_questions"
        android:layout_below="@+id/header"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@drawable/rounded_corners"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/sample_questions"/>
    <Button
        android:layout_marginTop="@dimen/dimen_50dp"
        android:id="@+id/btn_test_loksewa"
        android:layout_below="@+id/btn_sample_questions"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@drawable/rounded_corners"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/test"/>
    <Button
        android:layout_marginTop="@dimen/dimen_50dp"
        android:id="@+id/btn_exam_papers_loksewa"
        android:layout_below="@+id/btn_test_loksewa"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@drawable/rounded_corners"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/exam_papers"/>


</RelativeLayout>