<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@drawable/splash_updated"
    >

    <TextView
        style="@style/TextView"
        android:id="@+id/tv_android_qrce_app"
        android:layout_alignParentTop="true"
        android:background="@color/lightRed"
        android:text="@string/android_qrce_app"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/txt_40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            style="@style/TextView"
            android:id="@+id/tv_saying"
            android:text="@string/saying"
            android:textAlignment="center"
            android:textSize="@dimen/txt_23sp"
            android:textStyle="bold"
            />
        <ProgressBar
            android:layout_below="@+id/tv_saying"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:max="100"
            android:progress="0"/>

        <TextView
            style="@style/TextView"
            android:id="@+id/tv_version"
            android:text="@string/tv_version"
            android:layout_below="@+id/progress"
            android:textAlignment="center"
            android:textSize="@dimen/txt_20sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
</RelativeLayout>